Fixes overlap of title and completeness badge.
Makes sure when the metric group is expanded that the service title
doesn't try and use 100% of the width.

Unfortunately, this still overlaps at mobile phone resolutions even with
relatively short titles.

Fixes #56 (for browsers)

--- a/app/assets/stylesheets/_metric_group.scss
+++ b/app/assets/stylesheets/_metric_group.scss
@@ -100,6 +100,10 @@
   &:last-child {
     margin-bottom: 0;
   }
+
+  h2 {
+    width: 75%;
+  }
 }
 
 .m-metric-group__collapsed {
